fix(theme): increase header z-index to stay above scrolling content

--- a/content/themes/avancer-simplement/assets/css/screen.css
+++ b/content/themes/avancer-simplement/assets/css/screen.css
@@ -3204,7 +3204,7 @@ html.dark-mode .toggle-icon--dark {
     top: 0;
     left: 0;
     right: 0;
-    z-index: 100;
+    z-index: 1000;
 }
 
 /* Inner wrapper - 3 column grid for centered nav */
